# quiz8s

./: .gitignore  README.md  pyproject.toml
quiz8s/: __init__.py  cli.py  generator.py  judge.py  parser.py  questions.py
